<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.myapplication.ui.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.example.myapplication.ui.cars.CarsFragment"
        android:label="@string/cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/navigation_my_orders"
        android:name="com.example.myapplication.ui.my_orders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.myapplication.ui.basket.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" />
</navigation>